Add tpope's vim-rvm.

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/cucumber"]
 	path = bundle/cucumber
 	url = https://github.com/tpope/vim-cucumber.git
+[submodule "bundle/rvm"]
+	path = bundle/rvm
+	url = https://github.com/tpope/vim-rvm
