--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "bundle/rvm"]
 	path = bundle/rvm
 	url = https://github.com/tpope/vim-rvm
+[submodule "bundle/haml"]
+	path = bundle/haml
+	url = https://github.com/tpope/vim-haml.git
