--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "bundle/haml"]
 	path = bundle/haml
 	url = https://github.com/tpope/vim-haml.git
+[submodule "bundle/weasel"]
+	path = bundle/weasel
+	url = https://github.com/bjoernd/vim-weasel
